--- a/dev/templates/nav-bar.html
+++ b/dev/templates/nav-bar.html
@@ -9,17 +9,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand" href="#">Payments App</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Users<span class="sr-only">(current)</span></a></li>
-                <li><a href="#">Posts</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Link</a></li>
+                <li [class.active]="isCurrentRoute(['Users'])"><a [routerLink]="['Users']">Users<span class="sr-only">(current)</span></a></li>
+                <li [class.active]="isCurrentRoute(['Posts'])"><a [routerLink]="['Posts']">Posts</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
